frontend/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    sandbox: learn-kubernetes
    learn-kubernetes: frontendapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: quotes
          image: ghcr.io/x47base/frontend-counter:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
            - containerPort: 3100
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
