frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: counter-frontend
    sandbox: learn-kubernetes
    learn-kubernetes: frontendapp
  name: counter-frontend
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: 3100-tcp
    port: 3100
    protocol: TCP
    targetPort: 3100
  selector:
    app: counter-frontend
  sessionAffinity: None
  type: ClusterIP
